<?xml version="1.0"?>
<package format="2">
  <name>ros_imu_bno055</name>
  <version>0.0.0</version>
  <description>The ros_imu_bno055 package</description>

  <maintainer email="roboticarts1@gmail.com">Robert Vasquez Zavaleta</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/ros_imu_bno055</url>

  <author email="roboticarts1@gmail.com">Robert Vasquez Zavaleta</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
