<?xml version="1.0"?>
<package format="2">
  <name>bno055</name>
  <version>0.0.1</version>
  <description>The bno055 package</description>

  <maintainer email="roboticarts1@gmail.com">Robert Vasquez Zavaleta</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/ros_imu_bno055</url>

  <author email="roboticarts1@gmail.com">Robert Vasquez Zavaleta</author>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>python3-serial</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
